--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <p class="home-text">Are you buttoned-up or footloose & fancy-free? Get that freshly 
             sharpened pencil bouquet ready; take this quiz to find out
             how much your mind observes the world.</p>
-        <button class="lets-go">OH, YES PLEASE LET’S GO <i class="fas fa-long-arrow-alt-right"></i></button>
+        <button onclick="window.location.href = './form.html';" class="lets-go">OH, YES PLEASE LET’S GO <i class="fas fa-long-arrow-alt-right"></i></button>
     </div>
 </body>
 </html>
