--- a/form.html
+++ b/form.html
@@ -33,7 +33,7 @@
             </select>
             <label for="email">E-Mail Id:</label>
             <input type="email" id="email" name="email" placeholder="Enter your E-Mail Id" required>
-            <button type="submit">START THE QUIZ <i class="fas fa-long-arrow-alt-right"></i></button>
+            <button onclick="window.location.href = './quiz.html';" id="form-submit" type="submit">START THE QUIZ <i class="fas fa-long-arrow-alt-right"></i></button>
         </form>
     </div>
 </body>
