--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="manifest" href="./assets/site.webmanifest">
 
     <script src="https://kit.fontawesome.com/e9ee0e0e4c.js" crossorigin="anonymous"></script>
+    <script src="./main.js"></script>
     <link rel="stylesheet" href="./style.css">
 
     <title>Quiz</title>
