--- a/form.html
+++ b/form.html
@@ -11,15 +11,14 @@
     <link rel="manifest" href="./assets/site.webmanifest">
 
     <script src="https://kit.fontawesome.com/e9ee0e0e4c.js" crossorigin="anonymous"></script>
+    <script src="./main.js"></script>
     <link rel="stylesheet" href="./style.css">
-
-    <script src="https://kit.fontawesome.com/e9ee0e0e4c.js" crossorigin="anonymous"></script>
     <title>Give us some details</title>
 </head>
 <body>
     <div class="form-container">
         <h1 class="form-heading">Give us some details</h1>
-        <form>
+        <form id="user-form" onsubmit="formSubmit(event)">
             <label for="name">Your Name:</label>
             <input type="text" id="name" name="name" placeholder="Enter your Name" required>
             <label for="age">Your Age:</label>
@@ -33,7 +32,7 @@
             </select>
             <label for="email">E-Mail Id:</label>
             <input type="email" id="email" name="email" placeholder="Enter your E-Mail Id" required>
-            <button onclick="window.location.href = './quiz.html';" id="form-submit" type="submit">START THE QUIZ <i class="fas fa-long-arrow-alt-right"></i></button>
+            <button id="form-submit" type="submit">START THE QUIZ <i class="fas fa-long-arrow-alt-right"></i></button>
         </form>
     </div>
 </body>
