Quiz and score twmplate and score

--- a/form.html
+++ b/form.html
@@ -11,9 +11,8 @@
     <link rel="manifest" href="./assets/site.webmanifest">
 
     <script src="https://kit.fontawesome.com/e9ee0e0e4c.js" crossorigin="anonymous"></script>
-    <script src="./main.js"></script>
     <link rel="stylesheet" href="./style.css">
-    <title>Give us some details</title>
+    <title>Quiz</title>
 </head>
 <body>
     <div class="form-container">
@@ -36,4 +35,5 @@
         </form>
     </div>
 </body>
+<script src="./main.js"></script>
 </html>
