Changed form page to template

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link rel="manifest" href="./assets/site.webmanifest">
 
     <script src="https://kit.fontawesome.com/e9ee0e0e4c.js" crossorigin="anonymous"></script>
-    <script src="./main.js"></script>
     <link rel="stylesheet" href="./style.css">
 
     <title>Quiz</title>
@@ -27,7 +26,8 @@
         <p class="home-text">Are you buttoned-up or footloose & fancy-free? Get that freshly 
             sharpened pencil bouquet ready; take this quiz to find out
             how much your mind observes the world.</p>
-        <button onclick="window.location.href = './form.html';" class="lets-go">OH, YES PLEASE LET’S GO <i class="fas fa-long-arrow-alt-right"></i></button>
+        <button onclick="renderFormPage()" class="lets-go">OH, YES PLEASE LET’S GO <i class="fas fa-long-arrow-alt-right"></i></button>
     </div>
 </body>
+<script src="./main.js"></script>
 </html>
